--- a/site/aliases/templates/aliases.erb
+++ b/site/aliases/templates/aliases.erb
@@ -89,8 +89,16 @@ sales:		postmaster
 support:	postmaster
 
 
-# trap decode to catch security attacks
-decode:		root
 
 # Person who should get root's mail
 #root:		marc
+
+# trap decode to catch security attacks
+decode: root
+<% if @admin and @admin != 'root' -%>
+# Person who should get root's mail
+root: <%= @admin %>
+<% else -%>
+#root: marc
+<% end -%>
+
